# claude

./: README.md
3dsurvival/: 3dsurvival.cpp  readme.md
Amiga Assembly/: readme.md
bosconian/release/: game
bosconian/src/: bosconian.cpp
gta/release/: game
gta/src/: gta.cpp
gtav2/release/: game
gtav2/src/: gta.cpp  gta.save1
myplayform/: myplat.cpp  readme.md
newclass/include/: Building.h  Camera.h  Common.h  Entity.h  Game.h  Inventory.h  Item.h  Player.h  Rectangle.h  TileMap.h  UIManager.h  Vector2D.h  Zombie.h
newclass/release/: GameExe
newclass/src/: Building.cpp  Camera.cpp  Entity.cpp  Game.cpp  Inventory.cpp  Item.cpp  Player.cpp  Rectangle.cpp  TileMap.cpp  UIManager.cpp  Vector2D.cpp  Zombie.cpp  common.cpp  main.cpp
newcleancode/release/: game
newcleancode/src/: code.sav  game  game.cpp
png_processor/: Makefile  png_processor.cpp  readme.md
seek/release/: game
seek/src/: seek.cpp
seek2/: readme.md
seek2/release/: game
seek2/src/: seekt2.cpp
silkworm/release/: game
silkworm/src/: silkworm.cpp
silkwormv2/: readme.md  silk.cpp
spyhunter/release/: game
spyhunter/src/: sh.cpp
super_rapid_fire/release/: game
super_rapid_fire/src/: srf.cpp
wall_door_analyzer/: Makefile  readme.md  wall_door_analyzer.cpp
zombie_maze/: CMakeLists.txt  readme.md  zombie_maze.cpp
